[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "2.0.0"
regex = "1.11.1"
ndarray = "0.14"
ndarray-linalg = { version = "0.13", features = ["openblas-static"] }
